# simple-game

./: .clang-format  .clangd  .envrc  TODO.md  compile.sh  flake.nix  meson.build  setup.sh  typos.toml
.helix/: languages.toml
include/: arena.h  flecs.h  init.h  macro_utils.h  shader_macros.h  texture.h  window.h
include/glad/: gl.h
include/math/: linalg.h
include/models/: model.h
include/std/: allocator.h  arena.h  preamble.h  string.h  types.h
include/std/datastructures/: linked_list.h  macro_utils.h
include/std/datastructures/linked_list/: linked_list.t.h
include/std/datastructures/linked_list/impl/: declarations.t.h  definitions.t.h  macros.t.h
include/std/macros/: container_of.h  control_flow.h  macro_utils.h
include/std/macros/types/: assert_has_field.h
include/std/math/: vec.h
include/std/mem/: align_up.h  allocator.h  arena.h
src/: flecs.c  glfw_glue.c  init.c  main.c  meson.build  model.c  texture.c  window.c
src/std/: allocator.c  arena.c  meson.build
